--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ click==8.0.3
 colorama==0.4.4
 dnspython==1.16.0
 Flask==2.0.2
+Flask-PyMongo==2.3.0
 icalendar==4.0.9
 itsdangerous==2.0.1
 Jinja2==3.0.2
@@ -12,3 +13,4 @@ python-dotenv==0.19.1
 pytz==2021.3
 six==1.16.0
 Werkzeug==2.0.2
+WTForms==3.0.0
